[package]
name = "pubsub"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
dotenvy = "0.15.7"
futures = "0.3.28"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.31.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.3", features = ["tracing", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }